adapted misc configs to my environment

--- a/i3status.conf
+++ b/i3status.conf
@@ -10,7 +10,7 @@ order += "disk /"
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
-order += "battery 1"
+#order += "battery 1"
 order += "cpu_temperature 0"
 order += "cpu_temperature 1"
 order += "load"
@@ -60,7 +60,7 @@ cpu_temperature 0 {
 
 cpu_temperature 1 {
 	format = "T: %degrees °C"
-	path = "/sys/devices/platform/coretemp.0/temp4_input"
+	path = "/sys/devices/platform/coretemp.0/temp3_input"
 }
 
 disk "/" {
