--- a/mc.ini
+++ b/mc.ini
@@ -1,4 +1,3 @@
-
 [Midnight-Commander]
 verbose=1
 pause_after_run=1
@@ -7,7 +6,7 @@ auto_save_setup=1
 preallocate_space=0
 auto_menu=0
 use_internal_view=1
-use_internal_edit=0
+use_internal_edit=1
 clear_before_exec=1
 confirm_delete=1
 confirm_overwrite=1
@@ -80,6 +79,12 @@ ignore_ftp_chattr_errors=true
 keymap=mc.keymap
 skin=default
 
+editor_cursor_after_inserted_block=0
+editor_ask_filename_before_edit=0
+editor_filesize_threshold=64M
+
+filepos_max_saved_entries=1024
+
 [Layout]
 message_visible=1
 keybar_visible=1
@@ -90,7 +95,7 @@ menubar_visible=1
 free_space=1
 horizontal_split=0
 vertical_equal=1
-left_panel_size=113
+left_panel_size=40
 horizontal_equal=1
 top_panel_size=1
 
@@ -105,8 +110,17 @@ autodetect_codeset=
 clipboard_store=
 clipboard_paste=
 
+spell_language=en
+
 [Colors]
 base_color=lightgray,green:normal=green,default:selected=white,gray:marked=yellow,default:markselect=yellow,gray:directory=blue,default:executable=brightgreen,default:link=cyan,default:device=brightmagenta,default:special=lightgray,default:errors=red,default:reverse=green,default:gauge=green,default:input=white,gray:dnormal=green,gray:dfocus=brightgreen,gray:dhotnormal=cyan,gray:dhotfocus=brightcyan,gray:menu=green,default:menuhot=cyan,default:menusel=green,gray:menuhotsel=cyan,default:helpnormal=cyan,default:editnormal=green,default:editbold=blue,default:editmarked=gray,blue:stalelink=red,default
+
+xterm=
+color_terminals=
+
+screen=
+
+linux=
 
 [Panels]
 show_mini_info=true
