--- a/mc.ini
+++ b/mc.ini
@@ -85,6 +85,9 @@ editor_filesize_threshold=64M
 
 filepos_max_saved_entries=1024
 
+editor_drop_selection_on_copy=1
+editor_stop_format_chars=-+*\\,.;:&>
+
 [Layout]
 message_visible=1
 keybar_visible=1
@@ -95,7 +98,7 @@ menubar_visible=1
 free_space=1
 horizontal_split=0
 vertical_equal=1
-left_panel_size=40
+left_panel_size=106
 horizontal_equal=1
 top_panel_size=1
 
