--- a/i3status.conf
+++ b/i3status.conf
@@ -9,10 +9,13 @@ order += "disk /"
 #order += "run_watch VPN"
 order += "wireless wlan0"
 order += "ethernet eth0"
+order += "ethernet eth1"
 order += "battery 0"
 #order += "battery 1"
 order += "cpu_temperature 0"
 order += "cpu_temperature 1"
+order += "cpu_temperature 2"
+order += "cpu_temperature 3"
 order += "load"
 order += "time"
 
@@ -25,6 +28,12 @@ ethernet eth0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
 	format_down = "E: down"
+}
+
+ethernet eth1 {
+        # if you use %speed, i3status requires root privileges
+        format_up = "U: %ip (%speed)"
+	format_down = "U: down"
 }
 
 battery 0 {
@@ -55,12 +64,22 @@ load {
 
 cpu_temperature 0 {
 	format = "T: %degrees °C"
-	path = "/sys/devices/platform/coretemp.0/temp2_input"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp2_input"
 }
 
 cpu_temperature 1 {
 	format = "T: %degrees °C"
-	path = "/sys/devices/platform/coretemp.0/temp3_input"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp3_input"
+}
+
+cpu_temperature 2 {
+	format = "T: %degrees °C"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp4_input"
+}
+
+cpu_temperature 3 {
+	format = "T: %degrees °C"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp5_input"
 }
 
 disk "/" {
