--- a/dnsmasq.d/eth1_nopxe.conf
+++ b/dnsmasq.d/eth1_nopxe.conf
@@ -7,11 +7,12 @@ expand-hosts
 
 interface=eth1
 
-dhcp-range=192.168.1.210,192.168.1.220,255.255.255.0,infinite
+dhcp-range=192.168.1.100,192.168.1.199,255.255.0.0,infinite
 dhcp-option=3,192.168.1.200	# Router
-dhcp-option=1,255.255.255.0 	# Subnet Mask (Must be sent after the router option, if both are included)
+dhcp-option=1,255.255.0.0 	# Subnet Mask (Must be sent after the router option, if both are included)
 dhcp-option=6,192.168.1.200	# Domain Name Server
 dhcp-option=42,0.0.0.0		# Network Time Protocol Servers
+dhcp-boot=/fitImage,0.0.0.0
 
 enable-tftp
 tftp-root=/srv/tftp
