--- a/dnsmasq.d/eth0_nopxe.conf
+++ b/dnsmasq.d/eth0_nopxe.conf
@@ -5,14 +5,14 @@ no-resolv
 no-poll
 expand-hosts
 
-interface=eth1
+interface=eth0
 
 dhcp-range=192.168.1.101,192.168.1.199,255.255.0.0,infinite
 dhcp-option=3,192.168.1.200	# Router
 dhcp-option=1,255.255.0.0 	# Subnet Mask (Must be sent after the router option, if both are included)
 dhcp-option=6,192.168.1.200	# Domain Name Server
 dhcp-option=42,0.0.0.0		# Network Time Protocol Servers
-dhcp-boot=/fitImage,0.0.0.0
+dhcp-boot=/linuximage,0.0.0.0
 
 enable-tftp
 tftp-root=/srv/tftp
